Fixed on mobile
 * also modified header sizes

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -14,13 +14,32 @@ h6 {
   font-family: $heading-font-family;
   line-height: $heading-line-height;
   margin: 0 0 $small-spacing;
+  text-rendering: optimizeLegibility; // Fix the character spacing for headings
+  font-weight: normal;
 }
 
-@for $i from 1 through 6 {
-  h#{$i} {
-    font-size: modular-scale(6 - $i);
-    font-weight: normal;
-  }
+h1 {
+  font-size: $base-font-size * 2.25; // 16 * 2.25 = 36px
+}
+
+h2 {
+  font-size: $base-font-size * 2; // 16 * 2 = 32px
+}
+
+h3 {
+  font-size: $base-font-size * 1.75; // 16 * 1.75 = 28px
+}
+
+h4 {
+  font-size: $base-font-size * 1.5; // 16 * 1.5 = 24px
+}
+
+h5 {
+  font-size: $base-font-size * 1.25; // 16 * 1.25 = 20px
+}
+
+h6 {
+  font-size: $base-font-size;
 }
 
 p {
