--- a/css/site.scss
+++ b/css/site.scss
@@ -298,12 +298,6 @@ body {
   }
 }
 
-@media screen and (max-width: 720px) {
-  #main-content {
-      width: 550px;
-  }
-}
-
 blockquote {
   border-left: 3px solid #DDD;
   color: #595959;
